# nobel_prize_agent

./: .env.example  README.md  pyproject.toml
module_template/: .env.example  run.py  schemas.py
module_template/configs/: deployment.json
nobel_prize_agent/: run.py  schemas.py
nobel_prize_agent/configs/: deployment.json  kb_deployments.json  llm_configs.json
